--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,33 @@ body {
     scroll-behavior: smooth;
 }
 
+@media (max-width: 1520px) {
+    html {
+        font-size: 14px;
+    }
+}
+@media (max-width: 1440px) {
+    html {
+        font-size: 13px;
+    }
+}
+@media (max-width: 1280px) {
+    html {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 1024px) {
+    html {
+        font-size: 18px;
+    }
+}
+@media (max-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+
 @supports (font-variation-settings: "wdth" 115) {
     h1 {
         font-family: "Montserrat", sans-serif;
